--- a/app.json
+++ b/app.json
@@ -1,18 +1,24 @@
 {
   "pages": [
+    "pages/homePage/homePage",
     "pages/loginRegisterPage/loginRegisterPage",
     "pages/mainPage/mainPage",
-    "pages/homePage/homePage",
+    "pages/text/text",
     "pages/messagePage/messagePage",
     "pages/myPage/myPage",
     "pages/projectDetail/projectDetail",
     "pages/addProject/addProject",
-    "pages/chatPage/chatPage" ,
-    "pages/discussionArea/discussionArea" ,
-    "pages/settings/settings"
+    "pages/chatPage/chatPage",
+    "pages/discussionArea/discussionArea",
+    "pages/settings/settings",
+    "pages/forgotPassword/forgotPassword",
+    "pages/my/my",
+    "pages/collectionPage/collectionPage",
+    "pages/forum/forum",
+    "pages/projectResults/projectResults"
   ],
   "window": {
-    "navigationBarTitleText": "你的小程序名称"
+    "navigationBarTitleText": "专业项目交流小程序"
   },
   "tabBar": {
     "list": [
@@ -23,6 +29,10 @@
       {
         "pagePath": "pages/messagePage/messagePage",
         "text": "消息"
+      },
+      {
+        "pagePath": "pages/forum/forum",
+        "text": "论坛"
       },
       {
         "pagePath": "pages/myPage/myPage",
