--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cloudbase/wx-cloud-client-sdk": "^1.2.1",
     "vant-weapp": "^0.5.29"
   },
-  "devDependencies": {},
   "description": ""
 }
