--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "pages": [
-    "pages/homePage/homePage",
+  "pages": [ 
     "pages/loginRegisterPage/loginRegisterPage",
+    "pages/homePage/homePage",
     "pages/mainPage/mainPage",
     "pages/text/text",
     "pages/messagePage/messagePage",
@@ -10,12 +10,12 @@
     "pages/addProject/addProject",
     "pages/chatPage/chatPage",
     "pages/discussionArea/discussionArea",
-    "pages/settings/settings",
     "pages/forgotPassword/forgotPassword",
-    "pages/my/my",
     "pages/collectionPage/collectionPage",
     "pages/forum/forum",
-    "pages/projectResults/projectResults"
+    "pages/projectResults/projectResults",
+    "pages/joinedProject/joinedProject",
+    "pages/my/myPage"
   ],
   "window": {
     "navigationBarTitleText": "专业项目交流小程序"
@@ -35,7 +35,7 @@
         "text": "论坛"
       },
       {
-        "pagePath": "pages/myPage/myPage",
+        "pagePath": "pages/my/myPage",
         "text": "我的"
       }
     ],
