--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "miniprogram-3",
+  "name": "mine",
   "version": "1.0.0",
   "main": ".eslintrc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
+    "@cloudbase/node-sdk": "3.2",
     "@cloudbase/wx-cloud-client-sdk": "^1.2.1",
-    "vant-weapp": "^0.5.29"
-  },
-  "description": ""
+    "regenerator-runtime": "^0.14.1"
+  }
 }
